infra/network-policy.yaml
# 1. DEFAULT DENY
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

---
# 2. ALLOWED DNS 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns-egress
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:  
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53

---
# 3. INGRESS -> APP 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-app
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pokero-app
  policyTypes:
  - Ingress
  ingress: 
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8000

---
#  4. APP <-> DATABASE 
# Part A: App to pokero-db
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-db
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pokero-app
  policyTypes:
  - Egress
  egress: 
  - to:
    - podSelector:
        matchLabels:
          app: pokero-db
    ports:
    - protocol: TCP
      port: 5432

---
# Part B: Base (pokero-db) 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-db-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: pokero-db
  policyTypes:
  - Ingress
  ingress: 
  - from:
    - podSelector:
        matchLabels:
          app: pokero-app
    ports:
    - protocol: TCP
      port: 5432

---
# --- 5. MONITORING ---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring-scraping
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress: 
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
    ports:
    - protocol: TCP
      port: 8000
    - protocol: TCP
      port: 9100
    - protocol: TCP
      port: 5432
